# gb-emu

./: .gitignore  CMakeLists.txt
includes/: bus.h  cart.h  common.h  cpu.h  cpu_util.h  emu.h  instructions.h  ppu.h  ram.h  timer.h
src/: bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  emu.c  instructions.c  main.c  ppu.c  ram.c  timer.c
